samples/_failures_safe/1761506007_39995b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82e90215.c: In function ‘main’:
./samples/SAFE/__tmp_82e90215.c:154:13: error: expected declaration or statement at end of input
  154 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_82e90215.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82e90215.c:154:13: error: expected declaration or statement at end of input
